--- a/metadata.yaml
+++ b/metadata.yaml
@@ -47,6 +47,7 @@ subjects:
 - !lcsh 'Falstaff, John, Sir (Fictitious character) -- Drama'
 - !lcsh 'Married women -- Drama'
 - !lcsh 'Comedies'
+- GITenberg
 title: 'The Merry Wives of Windsor
 
   The Works of William Shakespeare [Cambridge Edition] [9 vols.]'
